force-app/main/default/objects/User/fields/Branches_List__c.field-meta.xml
<CustomField>
    <fullName>Branches_List__c</fullName>
    <label>Branches List</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Branch_List</valueSetName>
    </valueSet>
</CustomField>