force-app/main/default/objects/User/fields/Branches_List_String_Literal__c.field-meta.xml
<CustomField>
    <fullName>Branches_List_String_Literal__c</fullName>
    <label>Branches List String Literal</label>
    <length>255</length>
    <type>Text</type>
</CustomField>