force-app/main/default/objects/User/fields/Product_Business_Line__c.field-meta.xml
<CustomField>
    <fullName>Product_Business_Line__c</fullName>
    <label>Product Business Line</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Product_Business_Line</valueSetName>
    </valueSet>
</CustomField>