force-app/main/default/objects/User/fields/Product_Business_Line_String_Literal__c.field-meta.xml
<CustomField>
    <fullName>Product_Business_Line_String_Literal__c</fullName>
    <label>Product Business Line String Literal</label>
    <length>255</length>
    <type>Text</type>
</CustomField>