force-app/main/default/objects/User/fields/User_Access_Queue_List__c.field-meta.xml
<CustomField>
    <fullName>User_Access_Queue_List__c</fullName>
    <defaultValue>&apos;N/A&apos;</defaultValue>
    <description>Will have the all the queue list updated for a particular User</description>
    <label>User Access Queue List</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>