force-app/main/default/objects/User/fields/User_Access_Queue_List_String_Literal__c.field-meta.xml
<CustomField>
    <fullName>User_Access_Queue_List_String_Literal__c</fullName>
    <label>User Access Queue List String Literal</label>
    <length>255</length>
    <type>Text</type>
</CustomField>